--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hello Angular2</title>
 </head>
 <body>
-Hello World.
+<my-app>Loading...</my-app>
+<script src="../node_modules/es6-shim/es6-shim.min.js"></script>
+<script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>
+<script src="../node_modules/rxjs/bundles/Rx.umd.js"></script>
+<script src="../node_modules/angular2/bundles/angular2-all.umd.js"></script>
+<!--<script src='./component.js'></script>-->
+<!--<script src='./main.js'></script>-->
 </body>
 </html>
+
+
+<!--<script src="node_modules/es6-shim/es6-shim.js"></script>-->
+<!--<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>-->
+<!--<script src="node_modules/systemjs/dist/system.src.js"></script>-->
+<!--<script src="node_modules/rxjs/bundles/Rx.js"></script>-->
+<!--<script src="node_modules/angular2/bundles/angular2.dev.js"></script>-->
